--- a/html/index.html
+++ b/html/index.html
@@ -8,10 +8,7 @@
 <h2>DB 체크</h2>
 
 이름 입력: <input type="text" name="name" />
-<br/>
-<br/>
-<input type="button" value="조회" onclick="javascript:send();"/>
-<br/>
+<input type="button" value="조회" onclick="javascript:send('search');"/>
 <br/>
 <p>&copy 2024 클라우드 엔지니어 프로젝트</p>
 </body>
