--- a/html/index.html
+++ b/html/index.html
@@ -1,15 +1,18 @@
 <html>
-<head>
-    <meta charset="UTF-8">
-    <script src="./config/config.js"></script>
-    <script src="./scripts.js"></script>
-</head>
-<body>
-<h2>DB 체크</h2>
 
-이름 입력: <input type="text" name="name" />
-<input type="button" value="조회" onclick="javascript:send('search');"/>
-<br/>
-<p>&copy 2024 클라우드 엔지니어 프로젝트</p>
+<head>
+  <meta charset="UTF-8">
+  <script src="./config/config.js"></script>
+  <script src="./scripts.js"></script>
+</head>
+
+<body>
+  <h2>DB 체크</h2>
+
+  이름 입력: <input type="text" name="name">
+  <input type="button" value="조회" onclick="javascript:send('search');">
+  <br>
+  <p>&copy 2024 클라우드 엔지니어 프로젝트</p>
 </body>
+
 </html>
