--- a/html/index.html
+++ b/html/index.html
@@ -7,11 +7,24 @@
 </head>
 
 <body>
-  <h2>DB 체크</h2>
+  <h2>조회 페이지</h2>
 
-  이름 입력: <input type="text" name="name">
-  <input type="button" value="조회" onclick="javascript:send('search');">
-  <br>
+  <div id="input">
+    이름과 전화번호를 입력해서 검색할 수 있습니다.<br>
+    이름: <input type="text" name="name"><br>
+    전화번호: <input type="text" name="contactNumber"><br>
+    <input type="button" value="조회" onclick="javascript:send('search');">
+  </div>
+
+  <div id="result">
+    <h2>조회 결과</h2>
+    이름: <span id="result-name"></span><br>
+    주민번호: <span id="result-residentRegistrationNumber"></span><br>
+    연락처: <span id="result-contactNumber"></span><br>
+    주소: <span id="result-address"></span><br>
+    이메일: <span id="result-email"></span><br>
+  </div>
+
   <p>&copy 2024 클라우드 엔지니어 프로젝트</p>
 </body>
 
