--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
     <input type="button" value="신청" onclick="javascript:send('insert');">
   </div>
 
-  <p>&copy 2024 클라우드 엔지니어 프로젝트</p>
+  <p>&copy 2024 클라우드 엔지니어 프로젝트 04.30.1</p>
 </body>
 
 </html>
